# blackboard

./: .gitignore  CMakeLists.txt  vcpkg.json
3rd/: CMakeLists.txt
3rd/ImGuizmo/: CMakeLists.txt
3rd/imgui/: CMakeLists.txt
blackboard_core/: CMakeLists.txt
blackboard_core/app/: app.cpp  app.h  resources.h
blackboard_core/gui/: components.h  gui.cpp  gui.h
blackboard_core/meta/: meta.h
blackboard_core/platform/: window.cpp  window.h
blackboard_core/renderer/: camera.h  program.cpp  program.h  renderer.cpp  renderer.h
blackboard_core/renderer/material/: manager.h  material.h  uniformcolor.cpp  uniformcolor.h
blackboard_core/renderer/platform/: imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h
blackboard_core/renderer/shaders/uniform_color/: uniform_color_fs.sc  uniform_color_vs.sc
blackboard_core/resources/: resources.cpp  resources.h
blackboard_core/scene/components/: transform.h  uuid.h
blackboard_core/state/: state.h
blackboard_core/utils/: watchdog.h
blackboard_editor/: CMakeLists.txt  main.cpp
blackboard_editor/editor/: editor.cpp  editor.h
